--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -1,4 +1,7 @@
-#fa-icons-overlay {
+#emsm-icons-overlay {
+	display: none;
+	max-width: 800px;
+/*
 	padding: 0;
 	margin: 0;
 	display: none;
@@ -8,6 +11,7 @@
 	padding: 10px;
 	overflow: scroll;
 	position: relative;
+*/
 }
 .fa-icons-list {
 	padding: 0;
@@ -37,48 +41,4 @@ a.icon-modal-link {
 .icon-img {
 	margin: 0 5px;
 	display: inline-block;
-}
-
-/**
- * modal
- */
-.modal {
-  display: none;
-  width: 400px;
-  background: #fff;
-  padding: 15px 30px;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -o-border-radius: 8px;
-  -ms-border-radius: 8px;
-  border-radius: 8px;
-  -webkit-box-shadow: 0 0 10px #000;
-  -moz-box-shadow: 0 0 10px #000;
-  -o-box-shadow: 0 0 10px #000;
-  -ms-box-shadow: 0 0 10px #000;
-  box-shadow: 0 0 10px #000;
-}
-.modal a.close-modal {
-	color: #000;
-	text-decoration: none;
-	position: absolute;
-	top: 5px;
-	right: 5px;
-	font-size: 18px;
-}
-.modal-spinner {
-  display: none;
-  width: 64px;
-  height: 64px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-right: -32px;
-  margin-top: -32px;
-  background: url(spinner.gif) #111 no-repeat center center;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -o-border-radius: 8px;
-  -ms-border-radius: 8px;
-  border-radius: 8px;
 }
