styled admin, made it sortable, fixed fb issue

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -1,3 +1,7 @@
+#emsm-social-media-table .ui-state-default {
+	background: transparent;
+	border: none;
+}
 .emsm-admin-settings .icon-img-fa .fa {
 	font-size: 20px;
 }
